...
    onTextChange: (TextReaderSettings) -> Unit,
) {
    val textDimensions = settings.textReader.toDpDimensions(LocalDensity.current)
    Column(
        modifier = Modifier
            .fillMaxWidth()
            .testTag("reading-default-settings"),
        verticalArrangement = Arrangement.spacedBy(10.dp),
    ) {
        ReaderSettingsGroupTitle(stringResource(R.string.reader_common_settings))
        ChoiceSettingRow(
            title = stringResource(R.string.reader_chapter_order),
            description = stringResource(R.string.reader_chapter_order_description),
...
